--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Pseudo-Class Demo</title>
+    <link rel="stylesheet" href="style.css" media="all" charset="utf-8">
+</head>
+<body>
+
 <ul>
   <li>Home</li>
   <li>About</li>
@@ -21,3 +30,4 @@
 
 <input type="checkbox"/><label>I am checked</label>
 <button>Click Me</button>
+</body>
