Add elements to HTML

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Pseudo-Class Demo</title>
-    <link rel="stylesheet" href="style.css" media="all" charset="utf-8">
+    <link rel="stylesheet" href="..\style\main.css" media="all" charset="utf-8">
 </head>
 <body>
 
@@ -30,4 +30,22 @@
 
 <input type="checkbox"/><label>I am checked</label>
 <button>Click Me</button>
+
+
+<div id="outerBox">
+    <div id="innerBox">
+        <ul>
+            <li>text</li>
+            <li>text</li>
+            <li>text</li>
+            <li>text</li>
+            <li>text</li>
+            <li>text</li>
+            <li>text</li>
+            <li>text</li>
+        </ul>
+    </div>
+</div>
+<div class="btn">Welcome</div>
+
 </body>
