Add elements to HTML

--- a/html/index.html
+++ b/html/index.html
@@ -31,6 +31,8 @@
 <input type="checkbox"/><label>I am checked</label>
 <button>Click Me</button>
 
+<p class="demo" rel="Lorem Stam ipsum"> bla bla bla </p>
+
 
 <div id="outerBox">
     <div id="innerBox">
